neutron/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     statement -> kword_declaration
Rule 4     statement -> variable_assignment
Rule 5     statement -> python_code_stmt
Rule 6     statement -> class_attribute_assignment
Rule 7     statement -> function_call_stmt
Rule 8     statement -> class_declaration
Rule 9     statement -> function_declaration
Rule 10    function_call_stmt -> function_call ;
Rule 11    python_code_stmt -> python_code ;
Rule 12    function_call -> expression ( empty )
Rule 13    function_call -> expression ( function_arguments )
Rule 14    function_declaration -> FUNC ID ( empty ) { program }
Rule 15    function_declaration -> FUNC ID ( function_arguments ) { program }
Rule 16    kword_declaration -> KWORD ID ( empty ) { program }
Rule 17    kword_declaration -> KWORD ID ( function_arguments ) { program }
Rule 18    function_arguments -> kwargs
Rule 19    function_arguments -> positional_args , kwargs
Rule 20    function_arguments -> positional_args
Rule 21    class_declaration -> CLASS ID { program }
Rule 22    positional_args -> expression
Rule 23    positional_args -> positional_args , expression
Rule 24    kwargs -> ID = expression
Rule 25    kwargs -> kwargs , id = expression
Rule 26    variable_assignment -> ID = expression ;
Rule 27    class_attribute_assignment -> class_attribute = expression ;
Rule 28    expression -> class_attribute
Rule 29    expression -> id
Rule 30    expression -> string
Rule 31    expression -> bool
Rule 32    expression -> float
Rule 33    expression -> int
Rule 34    expression -> function_call
Rule 35    expression -> python_code
Rule 36    expression -> ( expression )
Rule 37    expression -> expression > expression  [precedence=left, level=4]
Rule 38    expression -> expression < expression  [precedence=left, level=4]
Rule 39    expression -> ! expression  [precedence=right, level=8]
Rule 40    expression -> expression & expression  [precedence=left, level=2]
Rule 41    expression -> expression | expression  [precedence=left, level=1]
Rule 42    expression -> expression EQ_GREATER expression  [precedence=left, level=4]
Rule 43    expression -> expression EQ_LESS expression  [precedence=left, level=4]
Rule 44    expression -> expression EQEQ expression  [precedence=left, level=3]
Rule 45    expression -> expression % expression  [precedence=left, level=6]
Rule 46    expression -> expression * expression  [precedence=left, level=6]
Rule 47    expression -> expression / expression  [precedence=left, level=6]
Rule 48    expression -> expression - expression  [precedence=left, level=5]
Rule 49    expression -> expression + expression  [precedence=left, level=5]
Rule 50    expression -> + expression  [precedence=right, level=7]
Rule 51    expression -> - expression  [precedence=right, level=7]
Rule 52    int -> INT
Rule 53    string -> STRING
Rule 54    float -> FLOAT
Rule 55    bool -> FALSE
Rule 56    bool -> TRUE
Rule 57    class_attribute -> expression COLON_COLON ID
Rule 58    id -> ID
Rule 59    python_code -> PYTHON_CODE
Rule 60    empty -> <empty>

Unused terminals:

    IF
    NOT_EQEQ
    ELSE
    ID_INTERNAL
    ELSIF

Terminals, with rules where they appear:

!                    : 39
%                    : 45
&                    : 40
(                    : 12 13 14 15 16 17 36
)                    : 12 13 14 15 16 17 36
*                    : 46
+                    : 49 50
,                    : 19 23 25
-                    : 48 51
/                    : 47
;                    : 10 11 26 27
<                    : 38
=                    : 24 25 26 27
>                    : 37
CLASS                : 21
COLON_COLON          : 57
ELSE                 : 
ELSIF                : 
EQEQ                 : 44
EQ_GREATER           : 42
EQ_LESS              : 43
FALSE                : 55
FLOAT                : 54
FUNC                 : 14 15
ID                   : 14 15 16 17 21 24 26 57 58
ID_INTERNAL          : 
IF                   : 
INT                  : 52
KWORD                : 16 17
NOT_EQEQ             : 
PYTHON_CODE          : 59
STRING               : 53
TRUE                 : 56
error                : 
{                    : 14 15 16 17 21
|                    : 41
}                    : 14 15 16 17 21

Nonterminals, with rules where they appear:

bool                 : 31
class_attribute      : 27 28
class_attribute_assignment : 6
class_declaration    : 8
empty                : 12 14 16
expression           : 12 13 22 23 24 25 26 27 36 37 37 38 38 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51 57
float                : 32
function_arguments   : 13 15 17
function_call        : 10 34
function_call_stmt   : 7
function_declaration : 9
id                   : 25 29
int                  : 33
kwargs               : 18 19 25
kword_declaration    : 3
positional_args      : 19 20 23
program              : 2 14 15 16 17 21 0
python_code          : 11 35
python_code_stmt     : 5
statement            : 1 2
string               : 30
variable_assignment  : 4


state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (3) statement -> . kword_declaration
    (4) statement -> . variable_assignment
    (5) statement -> . python_code_stmt
    (6) statement -> . class_attribute_assignment
    (7) statement -> . function_call_stmt
    (8) statement -> . class_declaration
    (9) statement -> . function_declaration
    (16) kword_declaration -> . KWORD ID ( empty ) { program }
    (17) kword_declaration -> . KWORD ID ( function_arguments ) { program }
    (26) variable_assignment -> . ID = expression ;
    (11) python_code_stmt -> . python_code ;
    (27) class_attribute_assignment -> . class_attribute = expression ;
    (10) function_call_stmt -> . function_call ;
    (21) class_declaration -> . CLASS ID { program }
    (14) function_declaration -> . FUNC ID ( empty ) { program }
    (15) function_declaration -> . FUNC ID ( function_arguments ) { program }
    (59) python_code -> . PYTHON_CODE
    (57) class_attribute -> . expression COLON_COLON ID
    (12) function_call -> . expression ( empty )
    (13) function_call -> . expression ( function_arguments )
    (28) expression -> . class_attribute
    (29) expression -> . id
    (30) expression -> . string
    (31) expression -> . bool
    (32) expression -> . float
    (33) expression -> . int
    (34) expression -> . function_call
    (35) expression -> . python_code
    (36) expression -> . ( expression )
    (37) expression -> . expression > expression
    (38) expression -> . expression < expression
    (39) expression -> . ! expression
    (40) expression -> . expression & expression
    (41) expression -> . expression | expression
    (42) expression -> . expression EQ_GREATER expression
    (43) expression -> . expression EQ_LESS expression
    (44) expression -> . expression EQEQ expression
    (45) expression -> . expression % expression
    (46) expression -> . expression * expression
    (47) expression -> . expression / expression
    (48) expression -> . expression - expression
    (49) expression -> . expression + expression
    (50) expression -> . + expression
    (51) expression -> . - expression
    (58) id -> . ID
    (53) string -> . STRING
    (55) bool -> . FALSE
    (56) bool -> . TRUE
    (54) float -> . FLOAT
    (52) int -> . INT
    KWORD           shift and go to state 10
    ID              shift and go to state 11
    CLASS           shift and go to state 17
    FUNC            shift and go to state 18
    PYTHON_CODE     shift and go to state 19
    (               shift and go to state 12
    !               shift and go to state 25
    +               shift and go to state 27
    -               shift and go to state 26
    STRING          shift and go to state 28
    FALSE           shift and go to state 29
    TRUE            shift and go to state 30
    FLOAT           shift and go to state 31
    INT             shift and go to state 32

    program                        shift and go to state 1
    statement                      shift and go to state 2
    kword_declaration              shift and go to state 3
    variable_assignment            shift and go to state 4
    python_code_stmt               shift and go to state 5
    class_attribute_assignment     shift and go to state 6
    function_call_stmt             shift and go to state 7
    class_declaration              shift and go to state 8
    function_declaration           shift and go to state 9
    expression                     shift and go to state 13
    python_code                    shift and go to state 14
    class_attribute                shift and go to state 15
    function_call                  shift and go to state 16
    id                             shift and go to state 20
    string                         shift and go to state 21
    bool                           shift and go to state 22
    float                          shift and go to state 23
    int                            shift and go to state 24

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (3) statement -> . kword_declaration
    (4) statement -> . variable_assignment
    (5) statement -> . python_code_stmt
    (6) statement -> . class_attribute_assignment
    (7) statement -> . function_call_stmt
    (8) statement -> . class_declaration
    (9) statement -> . function_declaration
    (16) kword_declaration -> . KWORD ID ( empty ) { program }
    (17) kword_declaration -> . KWORD ID ( function_arguments ) { program }
    (26) variable_assignment -> . ID = expression ;
    (11) python_code_stmt -> . python_code ;
    (27) class_attribute_assignment -> . class_attribute = expression ;
    (10) function_call_stmt -> . function_call ;
    (21) class_declaration -> . CLASS ID { program }
    (14) function_declaration -> . FUNC ID ( empty ) { program }
    (15) function_declaration -> . FUNC ID ( function_arguments ) { program }
    (59) python_code -> . PYTHON_CODE
    (57) class_attribute -> . expression COLON_COLON ID
    (12) function_call -> . expression ( empty )
    (13) function_call -> . expression ( function_arguments )
    (28) expression -> . class_attribute
    (29) expression -> . id
    (30) expression -> . string
    (31) expression -> . bool
    (32) expression -> . float
    (33) expression -> . int
    (34) expression -> . function_call
    (35) expression -> . python_code
    (36) expression -> . ( expression )
    (37) expression -> . expression > expression
    (38) expression -> . expression < expression
    (39) expression -> . ! expression
    (40) expression -> . expression & expression
    (41) expression -> . expression | expression
    (42) expression -> . expression EQ_GREATER expression
    (43) expression -> . expression EQ_LESS expression
    (44) expression -> . expression EQEQ expression
    (45) expression -> . expression % expression
    (46) expression -> . expression * expression
    (47) expression -> . expression / expression
    (48) expression -> . expression - expression
    (49) expression -> . expression + expression
    (50) expression -> . + expression
    (51) expression -> . - expression
    (58) id -> . ID
    (53) string -> . STRING
    (55) bool -> . FALSE
    (56) bool -> . TRUE
    (54) float -> . FLOAT
    (52) int -> . INT
    KWORD           shift and go to state 10
    ID              shift and go to state 11
    CLASS           shift and go to state 17
    FUNC            shift and go to state 18
    PYTHON_CODE     shift and go to state 19
    (               shift and go to state 12
    !               shift and go to state 25
    +               shift and go to state 27
    -               shift and go to state 26
    STRING          shift and go to state 28
    FALSE           shift and go to state 29
    TRUE            shift and go to state 30
    FLOAT           shift and go to state 31
    INT             shift and go to state 32

    statement                      shift and go to state 33
    kword_declaration              shift and go to state 3
    variable_assignment            shift and go to state 4
    python_code_stmt               shift and go to state 5
    class_attribute_assignment     shift and go to state 6
    function_call_stmt             shift and go to state 7
    class_declaration              shift and go to state 8
    function_declaration           shift and go to state 9
    expression                     shift and go to state 13
    python_code                    shift and go to state 14
    class_attribute                shift and go to state 15
    function_call                  shift and go to state 16
    id                             shift and go to state 20
    string                         shift and go to state 21
    bool                           shift and go to state 22
    float                          shift and go to state 23
    int                            shift and go to state 24

state 2

    (1) program -> statement .
    KWORD           reduce using rule 1 (program -> statement .)
    ID              reduce using rule 1 (program -> statement .)
    CLASS           reduce using rule 1 (program -> statement .)
    FUNC            reduce using rule 1 (program -> statement .)
    PYTHON_CODE     reduce using rule 1 (program -> statement .)
    (               reduce using rule 1 (program -> statement .)
    !               reduce using rule 1 (program -> statement .)
    +               reduce using rule 1 (program -> statement .)
    -               reduce using rule 1 (program -> statement .)
    STRING          reduce using rule 1 (program -> statement .)
    FALSE           reduce using rule 1 (program -> statement .)
    TRUE            reduce using rule 1 (program -> statement .)
    FLOAT           reduce using rule 1 (program -> statement .)
    INT             reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)
    }               reduce using rule 1 (program -> statement .)


state 3

    (3) statement -> kword_declaration .
    KWORD           reduce using rule 3 (statement -> kword_declaration .)
    ID              reduce using rule 3 (statement -> kword_declaration .)
    CLASS           reduce using rule 3 (statement -> kword_declaration .)
    FUNC            reduce using rule 3 (statement -> kword_declaration .)
    PYTHON_CODE     reduce using rule 3 (statement -> kword_declaration .)
    (               reduce using rule 3 (statement -> kword_declaration .)
    !               reduce using rule 3 (statement -> kword_declaration .)
    +               reduce using rule 3 (statement -> kword_declaration .)
    -               reduce using rule 3 (statement -> kword_declaration .)
    STRING          reduce using rule 3 (statement -> kword_declaration .)
    FALSE           reduce using rule 3 (statement -> kword_declaration .)
    TRUE            reduce using rule 3 (statement -> kword_declaration .)
    FLOAT           reduce using rule 3 (statement -> kword_declaration .)
    INT             reduce using rule 3 (statement -> kword_declaration .)
    $end            reduce using rule 3 (statement -> kword_declaration .)
    }               reduce using rule 3 (statement -> kword_declaration .)


state 4

    (4) statement -> variable_assignment .
    KWORD           reduce using rule 4 (statement -> variable_assignment .)
    ID              reduce using rule 4 (statement -> variable_assignment .)
    CLASS           reduce using rule 4 (statement -> variable_assignment .)
    FUNC            reduce using rule 4 (statement -> variable_assignment .)
    PYTHON_CODE     reduce using rule 4 (statement -> variable_assignment .)
    (               reduce using rule 4 (statement -> variable_assignment .)
    !               reduce using rule 4 (statement -> variable_assignment .)
    +               reduce using rule 4 (statement -> variable_assignment .)
    -               reduce using rule 4 (statement -> variable_assignment .)
    STRING          reduce using rule 4 (statement -> variable_assignment .)
    FALSE           reduce using rule 4 (statement -> variable_assignment .)
    TRUE            reduce using rule 4 (statement -> variable_assignment .)
    FLOAT           reduce using rule 4 (statement -> variable_assignment .)
    INT             reduce using rule 4 (statement -> variable_assignment .)
    $end            reduce using rule 4 (statement -> variable_assignment .)
    }               reduce using rule 4 (statement -> variable_assignment .)


state 5

    (5) statement -> python_code_stmt .
    KWORD           reduce using rule 5 (statement -> python_code_stmt .)
    ID              reduce using rule 5 (statement -> python_code_stmt .)
    CLASS           reduce using rule 5 (statement -> python_code_stmt .)
    FUNC            reduce using rule 5 (statement -> python_code_stmt .)
    PYTHON_CODE     reduce using rule 5 (statement -> python_code_stmt .)
    (               reduce using rule 5 (statement -> python_code_stmt .)
    !               reduce using rule 5 (statement -> python_code_stmt .)
    +               reduce using rule 5 (statement -> python_code_stmt .)
    -               reduce using rule 5 (statement -> python_code_stmt .)
    STRING          reduce using rule 5 (statement -> python_code_stmt .)
    FALSE           reduce using rule 5 (statement -> python_code_stmt .)
    TRUE            reduce using rule 5 (statement -> python_code_stmt .)
    FLOAT           reduce using rule 5 (statement -> python_code_stmt .)
    INT             reduce using rule 5 (statement -> python_code_stmt .)
    $end            reduce using rule 5 (statement -> python_code_stmt .)
    }               reduce using rule 5 (statement -> python_code_stmt .)


state 6

    (6) statement -> class_attribute_assignment .
    KWORD           reduce using rule 6 (statement -> class_attribute_assignment .)
    ID              reduce using rule 6 (statement -> class_attribute_assignment .)
    CLASS           reduce using rule 6 (statement -> class_attribute_assignment .)
    FUNC            reduce using rule 6 (statement -> class_attribute_assignment .)
    PYTHON_CODE     reduce using rule 6 (statement -> class_attribute_assignment .)
    (               reduce using rule 6 (statement -> class_attribute_assignment .)
    !               reduce using rule 6 (statement -> class_attribute_assignment .)
    +               reduce using rule 6 (statement -> class_attribute_assignment .)
    -               reduce using rule 6 (statement -> class_attribute_assignment .)
    STRING          reduce using rule 6 (statement -> class_attribute_assignment .)
    FALSE           reduce using rule 6 (statement -> class_attribute_assignment .)
    TRUE            reduce using rule 6 (statement -> class_attribute_assignment .)
    FLOAT           reduce using rule 6 (statement -> class_attribute_assignment .)
    INT             reduce using rule 6 (statement -> class_attribute_assignment .)
    $end            reduce using rule 6 (statement -> class_attribute_assignment .)
    }               reduce using rule 6 (statement -> class_attribute_assignment .)


state 7

    (7) statement -> function_call_stmt .
    KWORD           reduce using rule 7 (statement -> function_call_stmt .)
    ID              reduce using rule 7 (statement -> function_call_stmt .)
    CLASS           reduce using rule 7 (statement -> function_call_stmt .)
    FUNC            reduce using rule 7 (statement -> function_call_stmt .)
    PYTHON_CODE     reduce using rule 7 (statement -> function_call_stmt .)
    (               reduce using rule 7 (statement -> function_call_stmt .)
    !               reduce using rule 7 (statement -> function_call_stmt .)
    +               reduce using rule 7 (statement -> function_call_stmt .)
    -               reduce using rule 7 (statement -> function_call_stmt .)
    STRING          reduce using rule 7 (statement -> function_call_stmt .)
    FALSE           reduce using rule 7 (statement -> function_call_stmt .)
    TRUE            reduce using rule 7 (statement -> function_call_stmt .)
    FLOAT           reduce using rule 7 (statement -> function_call_stmt .)
    INT             reduce using rule 7 (statement -> function_call_stmt .)
    $end            reduce using rule 7 (statement -> function_call_stmt .)
    }               reduce using rule 7 (statement -> function_call_stmt .)


state 8

    (8) statement -> class_declaration .
    KWORD           reduce using rule 8 (statement -> class_declaration .)
    ID              reduce using rule 8 (statement -> class_declaration .)
    CLASS           reduce using rule 8 (statement -> class_declaration .)
    FUNC            reduce using rule 8 (statement -> class_declaration .)
    PYTHON_CODE     reduce using rule 8 (statement -> class_declaration .)
    (               reduce using rule 8 (statement -> class_declaration .)
    !               reduce using rule 8 (statement -> class_declaration .)
    +               reduce using rule 8 (statement -> class_declaration .)
    -               reduce using rule 8 (statement -> class_declaration .)
    STRING          reduce using rule 8 (statement -> class_declaration .)
    FALSE           reduce using rule 8 (statement -> class_declaration .)
    TRUE            reduce using rule 8 (statement -> class_declaration .)
    FLOAT           reduce using rule 8 (statement -> class_declaration .)
    INT             reduce using rule 8 (statement -> class_declaration .)
    $end            reduce using rule 8 (statement -> class_declaration .)
    }               reduce using rule 8 (statement -> class_declaration .)


state 9

    (9) statement -> function_declaration .
    KWORD           reduce using rule 9 (statement -> function_declaration .)
    ID              reduce using rule 9 (statement -> function_declaration .)
    CLASS           reduce using rule 9 (statement -> function_declaration .)
    FUNC            reduce using rule 9 (statement -> function_declaration .)
    PYTHON_CODE     reduce using rule 9 (statement -> function_declaration .)
    (               reduce using rule 9 (statement -> function_declaration .)
    !               reduce using rule 9 (statement -> function_declaration .)
    +               reduce using rule 9 (statement -> function_declaration .)
    -               reduce using rule 9 (statement -> function_declaration .)
    STRING          reduce using rule 9 (statement -> function_declaration .)
    FALSE           reduce using rule 9 (statement -> function_declaration .)
    TRUE            reduce using rule 9 (statement -> function_declaration .)
    FLOAT           reduce using rule 9 (statement -> function_declaration .)
    INT             reduce using rule 9 (statement -> function_declaration .)
    $end            reduce using rule 9 (statement -> function_declaration .)
    }               reduce using rule 9 (statement -> function_declaration .)


state 10

    (16) kword_declaration -> KWORD . ID ( empty ) { program }
    (17) kword_declaration -> KWORD . ID ( function_arguments ) { program }
    ID              shift and go to state 34


state 11

    (26) variable_assignment -> ID . = expression ;
    (58) id -> ID .
    =               shift and go to state 35
    COLON_COLON     reduce using rule 58 (id -> ID .)
    (               reduce using rule 58 (id -> ID .)
    >               reduce using rule 58 (id -> ID .)
    <               reduce using rule 58 (id -> ID .)
    &               reduce using rule 58 (id -> ID .)
    |               reduce using rule 58 (id -> ID .)
    EQ_GREATER      reduce using rule 58 (id -> ID .)
    EQ_LESS         reduce using rule 58 (id -> ID .)
    EQEQ            reduce using rule 58 (id -> ID .)
    %               reduce using rule 58 (id -> ID .)
    *               reduce using rule 58 (id -> ID .)
    /               reduce using rule 58 (id -> ID .)
    -               reduce using rule 58 (id -> ID .)
    +               reduce using rule 58 (id -> ID .)


state 12

    (36) expression -> ( . expression )
    (28) expression -> . class_attribute
    (29) expression -> . id
    (30) expression -> . string
    (31) expression -> . bool
    (32) expression -> . float
    (33) expression -> . int
    (34) expression -> . function_call
    (35) expression -> . python_code
    (36) expression -> . ( expression )
    (37) expression -> . expression > expression
    (38) expression -> . expression < expression
    (39) expression -> . ! expression
    (40) expression -> . expression & expression
    (41) expression -> . expression | expression
    (42) expression -> . expression EQ_GREATER expression
    (43) expression -> . expression EQ_LESS expression
    (44) expression -> . expression EQEQ expression
    (45) expression -> . expression % expression
    (46) expression -> . expression * expression
    (47) expression -> . expression / expression
    (48) expression -> . expression - expression
    (49) expression -> . expression + expression
    (50) expression -> . + expression
    (51) expression -> . - expression
    (57) class_attribute -> . expression COLON_COLON ID
    (58) id -> . ID
    (53) string -> . STRING
    (55) bool -> . FALSE
    (56) bool -> . TRUE
    (54) float -> . FLOAT
    (52) int -> . INT
    (12) function_call -> . expression ( empty )
    (13) function_call -> . expression ( function_arguments )
    (59) python_code -> . PYTHON_CODE
    (               shift and go to state 12
    !               shift and go to state 25
    +               shift and go to state 27
    -               shift and go to state 26
    ID              shift and go to state 40
    STRING          shift and go to state 28
    FALSE           shift and go to state 29
    TRUE            shift and go to state 30
    FLOAT           shift and go to state 31
    INT             shift and go to state 32
    PYTHON_CODE     shift and go to state 19

    expression                     shift and go to state 36
    class_attribute                shift and go to state 37
    id                             shift and go to state 20
    string                         shift and go to state 21
    bool                           shift and go to state 22
    float                          shift and go to state 23
    int                            shift and go to state 24
    function_call                  shift and go to state 38
    python_code                    shift and go to state 39

state 13

    (57) class_attribute -> expression . COLON_COLON ID
    (12) function_call -> expression . ( empty )
    (13) function_call -> expression . ( function_arguments )
    (37) expression -> expression . > expression
    (38) expression -> expression . < expression
    (40) expression -> expression . & expression
    (41) expression -> expression . | expression
    (42) expression -> expression . EQ_GREATER expression
    (43) expression -> expression . EQ_LESS expression
    (44) expression -> expression . EQEQ expression
    (45) expression -> expression . % expression
    (46) expression -> expression . * expression
    (47) expression -> expression . / expression
    (48) expression -> expression . - expression
    (49) expression -> expression . + expression
    COLON_COLON     shift and go to state 41
    (               shift and go to state 42
    >               shift and go to state 43
    <               shift and go to state 44
    &               shift and go to state 45
    |               shift and go to state 46
    EQ_GREATER      shift and go to state 47
    EQ_LESS         shift and go to state 48
    EQEQ            shift and go to state 49
    %               shift and go to state 50
    *               shift and go to state 51
    /               shift and go to state 52
    -               shift and go to state 53
    +               shift and go to state 54


state 14

    (11) python_code_stmt -> python_code . ;
    (35) expression -> python_code .
    ;               shift and go to state 55
    COLON_COLON     reduce using rule 35 (expression -> python_code .)
    (               reduce using rule 35 (expression -> python_code .)
    >               reduce using rule 35 (expression -> python_code .)
    <               reduce using rule 35 (expression -> python_code .)
    &               reduce using rule 35 (expression -> python_code .)
    |               reduce using rule 35 (expression -> python_code .)
    EQ_GREATER      reduce using rule 35 (expression -> python_code .)
    EQ_LESS         reduce using rule 35 (expression -> python_code .)
    EQEQ            reduce using rule 35 (expression -> python_code .)
    %               reduce using rule 35 (expression -> python_code .)
    *               reduce using rule 35 (expression -> python_code .)
    /               reduce using rule 35 (expression -> python_code .)
    -               reduce using rule 35 (expression -> python_code .)
    +               reduce using rule 35 (expression -> python_code .)


state 15

    (27) class_attribute_assignment -> class_attribute . = expression ;
    (28) expression -> class_attribute .
    =               shift and go to state 56
    COLON_COLON     reduce using rule 28 (expression -> class_attribute .)
    (               reduce using rule 28 (expression -> class_attribute .)
    >               reduce using rule 28 (expression -> class_attribute .)
    <               reduce using rule 28 (expression -> class_attribute .)
    &               reduce using rule 28 (expression -> class_attribute .)
    |               reduce using rule 28 (expression -> class_attribute .)
    EQ_GREATER      reduce using rule 28 (expression -> class_attribute .)
    EQ_LESS         reduce using rule 28 (expression -> class_attribute .)
    EQEQ            reduce using rule 28 (expression -> class_attribute .)
    %               reduce using rule 28 (expression -> class_attribute .)
    *               reduce using rule 28 (expression -> class_attribute .)
    /               reduce using rule 28 (expression -> class_attribute .)
    -               reduce using rule 28 (expression -> class_attribute .)
    +               reduce using rule 28 (expression -> class_attribute .)


state 16

    (10) function_call_stmt -> function_call . ;
    (34) expression -> function_call .
    ;               shift and go to state 57
    COLON_COLON     reduce using rule 34 (expression -> function_call .)
    (               reduce using rule 34 (expression -> function_call .)
    >               reduce using rule 34 (expression -> function_call .)
    <               reduce using rule 34 (expression -> function_call .)
    &               reduce using rule 34 (expression -> function_call .)
    |               reduce using rule 34 (expression -> function_call .)
    EQ_GREATER      reduce using rule 34 (expression -> function_call .)
    EQ_LESS         reduce using rule 34 (expression -> function_call .)
    EQEQ            reduce using rule 34 (expression -> function_call .)
    %               reduce using rule 34 (expression -> function_call .)
    *               reduce using rule 34 (expression -> function_call .)
    /               reduce using rule 34 (expression -> function_call .)
    -               reduce using rule 34 (expression -> function_call .)
    +               reduce using rule 34 (expression -> function_call .)


state 17

    (21) class_declaration -> CLASS . ID { program }
    ID              shift and go to state 58


state 18

    (14) function_declaration -> FUNC . ID ( empty ) { program }
    (15) function_declaration -> FUNC . ID ( function_arguments ) { program }
    ID              shift and go to state 59


state 19

    (59) python_code -> PYTHON_CODE .
    ;               reduce using rule 59 (python_code -> PYTHON_CODE .)
    COLON_COLON     reduce using rule 59 (python_code -> PYTHON_CODE .)
    (               reduce using rule 59 (python_code -> PYTHON_CODE .)
    >               reduce using rule 59 (python_code -> PYTHON_CODE .)
    <               reduce using rule 59 (python_code -> PYTHON_CODE .)
    &               reduce using rule 59 (python_code -> PYTHON_CODE .)
    |               reduce using rule 59 (python_code -> PYTHON_CODE .)
    EQ_GREATER      reduce using rule 59 (python_code -> PYTHON_CODE .)
    EQ_LESS         reduce using rule 59 (python_code -> PYTHON_CODE .)
    EQEQ            reduce using rule 59 (python_code -> PYTHON_CODE .)
    %               reduce using rule 59 (python_code -> PYTHON_CODE .)
    *               reduce using rule 59 (python_code -> PYTHON_CODE .)
    /               reduce using rule 59 (python_code -> PYTHON_CODE .)
    -               reduce using rule 59 (python_code -> PYTHON_CODE .)
    +               reduce using rule 59 (python_code -> PYTHON_CODE .)
    )               reduce using rule 59 (python_code -> PYTHON_CODE .)
    ,               reduce using rule 59 (python_code -> PYTHON_CODE .)


state 20

    (29) expression -> id .
    COLON_COLON     reduce using rule 29 (expression -> id .)
    (               reduce using rule 29 (expression -> id .)
    >               reduce using rule 29 (expression -> id .)
    <               reduce using rule 29 (expression -> id .)
    &               reduce using rule 29 (expression -> id .)
    |               reduce using rule 29 (expression -> id .)
    EQ_GREATER      reduce using rule 29 (expression -> id .)
    EQ_LESS         reduce using rule 29 (expression -> id .)
    EQEQ            reduce using rule 29 (expression -> id .)
    %               reduce using rule 29 (expression -> id .)
    *               reduce using rule 29 (expression -> id .)
    /               reduce using rule 29 (expression -> id .)
    -               reduce using rule 29 (expression -> id .)
    +               reduce using rule 29 (expression -> id .)
    )               reduce using rule 29 (expression -> id .)
    ;               reduce using rule 29 (expression -> id .)
    ,               reduce using rule 29 (expression -> id .)


state 21

    (30) expression -> string .
    COLON_COLON     reduce using rule 30 (expression -> string .)
    (               reduce using rule 30 (expression -> string .)
    >               reduce using rule 30 (expression -> string .)
    <               reduce using rule 30 (expression -> string .)
    &               reduce using rule 30 (expression -> string .)
    |               reduce using rule 30 (expression -> string .)
    EQ_GREATER      reduce using rule 30 (expression -> string .)
    EQ_LESS         reduce using rule 30 (expression -> string .)
    EQEQ            reduce using rule 30 (expression -> string .)
    %               reduce using rule 30 (expression -> string .)
    *               reduce using rule 30 (expression -> string .)
    /               reduce using rule 30 (expression -> string .)
    -               reduce using rule 30 (expression -> string .)
    +               reduce using rule 30 (expression -> string .)
    )               reduce using rule 30 (expression -> string .)
    ;               reduce using rule 30 (expression -> string .)
    ,               reduce using rule 30 (expression -> string .)


state 22

    (31) expression -> bool .
    COLON_COLON     reduce using rule 31 (expression -> bool .)
    (               reduce using rule 31 (expression -> bool .)
    >               reduce using rule 31 (expression -> bool .)
    <               reduce using rule 31 (expression -> bool .)
    &               reduce using rule 31 (expression -> bool .)
    |               reduce using rule 31 (expression -> bool .)
    EQ_GREATER      reduce using rule 31 (expression -> bool .)
    EQ_LESS         reduce using rule 31 (expression -> bool .)
    EQEQ            reduce using rule 31 (expression -> bool .)
    %               reduce using rule 31 (expression -> bool .)
    *               reduce using rule 31 (expression -> bool .)
    /               reduce using rule 31 (expression -> bool .)
    -               reduce using rule 31 (expression -> bool .)
    +               reduce using rule 31 (expression -> bool .)
    )               reduce using rule 31 (expression -> bool .)
    ;               reduce using rule 31 (expression -> bool .)
    ,               reduce using rule 31 (expression -> bool .)


state 23

    (32) expression -> float .
    COLON_COLON     reduce using rule 32 (expression -> float .)
    (               reduce using rule 32 (expression -> float .)
    >               reduce using rule 32 (expression -> float .)
    <               reduce using rule 32 (expression -> float .)
    &               reduce using rule 32 (expression -> float .)
    |               reduce using rule 32 (expression -> float .)
    EQ_GREATER      reduce using rule 32 (expression -> float .)
    EQ_LESS         reduce using rule 32 (expression -> float .)
    EQEQ            reduce using rule 32 (expression -> float .)
    %               reduce using rule 32 (expression -> float .)
    *               reduce using rule 32 (expression -> float .)
    /               reduce using rule 32 (expression -> float .)
    -               reduce using rule 32 (expression -> float .)
    +               reduce using rule 32 (expression -> float .)
    )               reduce using rule 32 (expression -> float .)
    ;               reduce using rule 32 (expression -> float .)
    ,               reduce using rule 32 (expression -> float .)


state 24

    (33) expression -> int .
    COLON_COLON     reduce using rule 33 (expression -> int .)
    (               reduce using rule 33 (expression -> int .)
    >               reduce using rule 33 (expression -> int .)
    <               reduce using rule 33 (expression -> int .)
    &               reduce using rule 33 (expression -> int .)
    |               reduce using rule 33 (expression -> int .)
    EQ_GREATER      reduce using rule 33 (expression -> int .)
    EQ_LESS         reduce using rule 33 (expression -> int .)
    EQEQ            reduce using rule 33 (expression -> int .)
    %               reduce using rule 33 (expression -> int .)
    *               reduce using rule 33 (expression -> int .)
    /               reduce using rule 33 (expression -> int .)
    -               reduce using rule 33 (expression -> int .)
    +               reduce using rule 33 (expression -> int .)
    )               reduce using rule 33 (expression -> int .)
    ;               reduce using rule 33 (expression -> int .)
    ,               reduce using rule 33 (expression -> int .)


state 25

    (39) expression -> ! . expression
    (28) expression -> . class_attribute
    (29) expression -> . id
    (30) expression -> . string
    (31) expression -> . bool
    (32) expression -> . float
    (33) expression -> . int
    (34) expression -> . function_call
    (35) expression -> . python_code
    (36) expression -> . ( expression )
    (37) expression -> . expression > expression
    (38) expression -> . expression < expression
    (39) expression -> . ! expression
    (40) expression -> . expression & expression
    (41) expression -> . expression | expression
    (42) expression -> . expression EQ_GREATER expression
    (43) expression -> . expression EQ_LESS expression
    (44) expression -> . expression EQEQ expression
    (45) expression -> . expression % expression
    (46) expression -> . expression * expression
    (47) expression -> . expression / expression
    (48) expression -> . expression - expression
    (49) expression -> . expression + expression
    (50) expression -> . + expression
    (51) expression -> . - expression
    (57) class_attribute -> . expression COLON_COLON ID
    (58) id -> . ID
    (53) string -> . STRING
    (55) bool -> . FALSE
    (56) bool -> . TRUE
    (54) float -> . FLOAT
    (52) int -> . INT
    (12) function_call -> . expression ( empty )
    (13) function_call -> . expression ( function_arguments )
    (59) python_code -> . PYTHON_CODE
    (               shift and go to state 12
    !               shift and go to state 25
    +               shift and go to state 27
    -               shift and go to state 26
    ID              shift and go to state 40
    STRING          shift and go to state 28
    FALSE           shift and go to state 29
    TRUE            shift and go to state 30
    FLOAT           shift and go to state 31
    INT             shift and go to state 32
    PYTHON_CODE     shift and go to state 19
